# discord-lambda

./: Cargo.toml  README.md
discord-lambda/: Cargo.toml  README.md
discord-lambda/src/: lib.rs
discord-message/: Cargo.toml  README.md
discord-message/src/: lib.rs
discord-sendmessage/: Cargo.toml  README.md
discord-sendmessage/src/: main.rs
discord-webhook-client/: Cargo.toml  README.md
discord-webhook-client/src/: lib.rs
