[package]
name = "discord-sendmessage"
version = "0.1.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2018"
description = "A debug tool for sending simple text messages to Discord over a webhook"
readme = "README.md"
homepage = "https://github.com/ewpratten/discord-lambda/discord-sendmessage"
repository = "https://github.com/ewpratten/discord-lambda"
license = "GPL-3.0"
keywords = ["discord", "debugging"]
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
url = "2"
discord-message = { version = "0.1.0", path = "../discord-message" }
discord-webhook-client = { version = "0.1.0", path = "../discord-webhook-client" }
tokio = { version = "1.9.0", features = ["rt-multi-thread", "macros"] }

